@@ -76,6 +76,8 @@ scale_x_asn <- ScaleAsn$build_accessor(list(variable = "\"x\""))
 scale_x_atanh <- ScaleAtanh$build_accessor(list(variable = "\"x\""))
 scale_x_continuous <- ScaleContinuous$build_accessor(list(variable = "\"x\""))
 scale_x_date <- ScaleDate$build_accessor(list(variable = "\"x\""))
+scale_x_datetime <- ScaleDatetime$build_accessor(list(variable = "\"x\""))
+scale_x_datetime <- ScaleDatetime$build_accessor(list(variable = "\"x\""))
 scale_x_discrete <- ScaleDiscretePosition$build_accessor(list(variable = "\"x\""))
 scale_x_exp <- ScaleExp$build_accessor(list(variable = "\"x\""))
 scale_x_inverse <- ScaleInverse$build_accessor(list(variable = "\"x\""))
@@ -93,6 +95,8 @@ scale_y_asn <- ScaleAsn$build_accessor(list(variable = "\"y\""))
 scale_y_atanh <- ScaleAtanh$build_accessor(list(variable = "\"y\""))
 scale_y_continuous <- ScaleContinuous$build_accessor(list(variable = "\"y\""))
 scale_y_date <- ScaleDate$build_accessor(list(variable = "\"y\""))
+scale_y_datetime <- ScaleDatetime$build_accessor(list(variable = "\"y\""))
+scale_y_datetime <- ScaleDatetime$build_accessor(list(variable = "\"y\""))
 scale_y_discrete <- ScaleDiscretePosition$build_accessor(list(variable = "\"y\""))
 scale_y_exp <- ScaleExp$build_accessor(list(variable = "\"y\""))
 scale_y_inverse <- ScaleInverse$build_accessor(list(variable = "\"y\""))
